<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/talepart_imagebutton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/choose_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/talepart_imagebutton"/>

        <EditText
            android:id="@+id/talepart_text_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:minLines="3"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/talepart_imagebutton"
            android:layout_toStartOf="@id/choose_audio_button"/>

        <TextView
            android:textColor="#000000"
            android:id="@+id/audio_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_not_selected"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@id/choose_audio_button"
            android:layout_alignStart="@id/choose_audio_button" />

    </RelativeLayout>

</android.support.v7.widget.CardView>